; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_command_event_reinit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_command_event_reinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 (i32)* }
%struct.TYPE_8__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i32 (i32, i32)* }

@current_input = common dso_local global %struct.TYPE_7__* null, align 8
@current_input_data = common dso_local global i32 0, align 4
@CMD_EVENT_GAME_FOCUS_TOGGLE = common dso_local global i32 0, align 4
@configuration_settings = common dso_local global %struct.TYPE_8__* null, align 8
@current_video = common dso_local global %struct.TYPE_6__* null, align 8
@menu_driver_alive = common dso_local global i64 0, align 8
@video_driver_data = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @command_event_reinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @command_event_reinit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @video_driver_reinit(i32 %3)
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** @current_input, align 8
  %6 = icmp ne %struct.TYPE_7__* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** @current_input, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32 (i32)*, i32 (i32)** %9, align 8
  %11 = icmp ne i32 (i32)* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** @current_input, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32 (i32)*, i32 (i32)** %14, align 8
  %16 = load i32, i32* @current_input_data, align 4
  %17 = call i32 %15(i32 %16)
  br label %18

18:                                               ; preds = %12, %7, %1
  %19 = load i32, i32* @CMD_EVENT_GAME_FOCUS_TOGGLE, align 4
  %20 = call i32 @command_event(i32 %19, i8* inttoptr (i64 -1 to i8*))
  ret void
}

declare dso_local i32 @video_driver_reinit(i32) #1

declare dso_local i32 @command_event(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
